fixed skills group gap for mobile phones

--- a/src/Skills/Skills.css
+++ b/src/Skills/Skills.css
@@ -28,6 +28,12 @@
     letter-spacing: 1px;
 }
 
+@media screen and (max-width: 1024px) {
+    .skills_groups {
+        gap: 1.5rem;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .skills_section {
         margin-top: 2rem;
@@ -37,17 +43,13 @@
         /* border: 1px solid rgb(239, 79, 26); */
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 0;
     }
     .left_skills_group, .right_skills_group {
         width: 100%;
+        gap: 0;
     }
     .skill_info {
         margin: 0.5rem 0;
-    }
-}
-@media screen and (max-width: 1024px) {
-    .skills_groups {
-        gap: 1.5rem;
     }
 }
